Revert "Merge branch 'mercedesme-vehilce-sync' of https://github.com/weymann/openhab-addons into mercedesme-vehilce-sync"
This reverts commit 31677357423e78eb151655f691e8a2ae19e8ea0a, reversing
changes made to 081454fae1404f1f304934e0b008f74a75d594f5.