@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2022 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -36,23 +36,22 @@ import org.openhab.binding.tr064.internal.dto.scpd.service.SCPDScpdType;
  */
 @NonNullByDefault
 public class SCPDUtil {
-    private final SCPDRootType scpdRoot;
+    private SCPDRootType scpdRoot;
     private final List<SCPDDeviceType> scpdDevicesList = new ArrayList<>();
     private final Map<String, SCPDScpdType> serviceMap = new HashMap<>();
 
-    public SCPDUtil(HttpClient httpClient, String endpoint, int timeout) throws SCPDException {
-        SCPDRootType scpdRoot = Util.getAndUnmarshalXML(httpClient, endpoint + "/tr64desc.xml", SCPDRootType.class,
-                timeout);
+    public SCPDUtil(HttpClient httpClient, String endpoint) throws SCPDException {
+        SCPDRootType scpdRoot = Util.getAndUnmarshalXML(httpClient, endpoint + "/tr64desc.xml", SCPDRootType.class);
         if (scpdRoot == null) {
             throw new SCPDException("could not get SCPD root");
         }
         this.scpdRoot = scpdRoot;
 
-        scpdDevicesList.addAll(flatDeviceList(scpdRoot.getDevice()).toList());
+        scpdDevicesList.addAll(flatDeviceList(scpdRoot.getDevice()).collect(Collectors.toList()));
         for (SCPDDeviceType device : scpdDevicesList) {
             for (SCPDServiceType service : device.getServiceList()) {
                 SCPDScpdType scpd = serviceMap.computeIfAbsent(service.getServiceId(), serviceId -> Util
-                        .getAndUnmarshalXML(httpClient, endpoint + service.getSCPDURL(), SCPDScpdType.class, timeout));
+                        .getAndUnmarshalXML(httpClient, endpoint + service.getSCPDURL(), SCPDScpdType.class));
                 if (scpd == null) {
                     throw new SCPDException("could not get SCPD service");
                 }
@@ -81,7 +80,7 @@ public class SCPDUtil {
     }
 
     /**
-     * get a single device by its UDN
+     * get a single device by it's UDN
      *
      * @param udn the device UDN
      * @return the device
@@ -95,7 +94,7 @@ public class SCPDUtil {
     }
 
     /**
-     * get a single service by its serviceId
+     * get a single service by it's serviceId
      *
      * @param serviceId the service id
      * @return the service
